git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@9924 d0d07461-0603-4401-acd4-de1884942a52

--- a/struggling/sample3.html
+++ b/struggling/sample3.html
@@ -3,18 +3,13 @@
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  <meta http-equiv="Content-Style-Type" content="text/css" />
  <link rel="stylesheet" href="oldtype2.css" type="text/css" />
- <title>Emacs:Emacsのノウハウ</title>
+ <title>tooltipを出す方法</title>
 </head>
 <body>
-<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/icon:info.png"> </div> <div> <h2 id="H-idieks">infoアイコンを出す方法</h2> </div> </div>
-<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/icon:info.png"> </div> <div> <p id="H-idieks">日本語変換</p> </div> </div>
-<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/icon:info.png"> </div> <div> <pre>  (setq default-file-name-coding-system 'utf-8)</pre> </div> </div>
-<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/icon:info.png"> </div> <div> <pre>  (setq default-file-name-coding-system 'utf-8)</pre> </div> </div>
-<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/icon:info.png"> </div> <div> <pre>  (setq default-file-name-coding-system 'utf-8)</pre> </div> </div>
-<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/icon:info.png"> </div> <div> <pre>  (setq default-file-name-coding-system 'utf-8)</pre> </div> </div>
-
-
- <p class="li1">diredで日本語</p>
+<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/staticimg/icon.new1.png"> </div> <div> <h2 id="H-idieks">Cooltipを使ってtooltipを出す方法</h2> </div> </div>
+<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/staticimg/icon.new2.png"> </div> <div> <p id="H-idieks"> 1行目 </p> </div> </div>
+<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/staticimg/icon.new3.png"> </div> <div> <pre> 2行目 </pre> </div> </div>
+<div> <div style="float: left"> <img src="../Kahua/oldtype/oldtype/staticimg/icon.new4.png"> </div> <div> <pre> 3行目 </pre> </div> </div>
 </body>
 </head>
 </html>
