--- a/Kahua/oldtype/oldtype/staticimg/preview_list.html
+++ b/Kahua/oldtype/oldtype/staticimg/preview_list.html
@@ -4,9 +4,10 @@
 <img src="icon.new2.png"/> 
 <img src="icon.new3.png"/> 
 <img src="icon.new4.png"/> 
-<img src="icon.new5.png"/> 
+<img src="icon.new5.png"/>
+<img src="icon.person.png"/>
 <img src="dot16.png" /> 
-<img src="dot18.png" /> 
+img src="dot18.png" /> 
 <img src="dot20.png" /> 
 <img src="icon.accept.png" /> 
 <img src="icon.accept_blue.png" /> 
