Made the contents of RSS feed's <description> cotain full text. Supported null line for Wiki format.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@14311 d0d07461-0603-4401-acd4-de1884942a52

--- a/Kahua/oldtype/oldtype/staticimg/preview_list.html
+++ b/Kahua/oldtype/oldtype/staticimg/preview_list.html
@@ -7,7 +7,7 @@
 <img src="icon.new5.png"/>
 <img src="icon.person.png"/>
 <img src="dot16.png" /> 
-img src="dot18.png" /> 
+<img src="dot18.png" /> 
 <img src="dot20.png" /> 
 <img src="icon.accept.png" /> 
 <img src="icon.accept_blue.png" /> 
