--- a/Kahua/oldtype/oldtype/staticimg/preview_list.html
+++ b/Kahua/oldtype/oldtype/staticimg/preview_list.html
@@ -57,4 +57,8 @@
 <img src="triangle16.png" /> 
 <img src="triangle18.png" /> 
 <img src="icon.extlink.png" /> 
+<img src="icon.face_ng.gif"/> 
+<img src="icon.face_smile.gif"/> 
+<img src="icon.face_surprise.gif"/> 
+
 </pre>
