* fixed and removed subversion properties.  * et cetera.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@20511 d0d07461-0603-4401-acd4-de1884942a52

--- a/struggling/sample2.html
+++ b/struggling/sample2.html
@@ -1,12 +1,12 @@
 <html>
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
- <meta http-equiv="Content-Style-Type" content="text/css" />
- <link rel="stylesheet" href="oldtype1.css" type="text/css" />
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+ <meta http-equiv="Content-Style-Type" content="text/css">
+ <link rel="stylesheet" href="oldtype1.css" type="text/css">
  <title>Emacs:Emacsのノウハウ</title>
 </head>
 <body>
-<h2 id="H-idieks">日本語ファイル名をutf-8で扱う方法 </h2>
+<h2 id="H-idieks">日本語ファイル名をutf-8で扱う方法</h2>
  <p class="li1">diredで日本語</p>
  <p class="p1">これで、diredの両方でutf-8のファイル名が扱える。</p>
  <p class="li1">検証したのは Emacs 22.1 のみ。</p>
