--- a/struggling/sample3.html
+++ b/struggling/sample3.html
@@ -1,8 +1,8 @@
 <html>
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
- <meta http-equiv="Content-Style-Type" content="text/css" />
- <link rel="stylesheet" href="oldtype2.css" type="text/css" />
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+ <meta http-equiv="Content-Style-Type" content="text/css">
+ <link rel="stylesheet" href="oldtype2.css" type="text/css">
  <title>tooltipを出す方法</title>
 </head>
 <body>
